[package]
name = "yggdrasil_selfhost"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
trust-dns-resolver = "0.23.2"

[profile.release]
#opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

